<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="355dp"
    android:layout_height="412dp"
    android:layout_gravity="center"
    android:background="@drawable/dr_round_corner_dialog"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="412dp">

        <ImageView
            android:id="@+id/dialog_qr_purchased_image"
            android:layout_width="0dp"
            android:layout_height="160dp"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dialog_qr_purchased_top_title" />

        <LinearLayout
            android:id="@+id/dialog_qr_purchased_save_send_view"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:layout_marginBottom="2dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@id/dialog_qr_purchased_navigate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ir.ac.kntu.Technical.CustomView.TextViewPlus
                android:id="@+id/dialog_qr_purchased_share"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="2dp"
                android:layout_weight="1"
                android:foreground="?android:attr/selectableItemBackground"
                android:gravity="center"
                android:text="@string/share"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <ir.ac.kntu.Technical.CustomView.TextViewPlus
                android:id="@+id/dialog_qr_purchased_save"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:foreground="?android:attr/selectableItemBackground"
                android:gravity="center"
                android:text="@string/save"
                android:textColor="@android:color/white"
                android:textSize="18sp" />
        </LinearLayout>


        <ir.ac.kntu.Technical.CustomView.TextViewPlus
            android:id="@+id/dialog_qr_purchased_top_title"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:background="@drawable/rec_curve_top"
            android:gravity="center"
            android:text="@string/payment_bill"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ir.ac.kntu.Technical.CustomView.TextViewPlus
            android:id="@+id/dialog_qr_purchased_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/dialog_qr_purchased_save_send_view"
            app:layout_constraintEnd_toEndOf="@id/dialog_qr_purchased_image"
            app:layout_constraintStart_toStartOf="@id/dialog_qr_purchased_image"
            app:layout_constraintTop_toBottomOf="@id/dialog_qr_purchased_image" />

        <ir.ac.kntu.Technical.CustomView.TextViewPlus
            android:id="@+id/dialog_qr_purchased_navigate"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:background="@drawable/rec_curve_bottom"
            android:foreground="?android:attr/selectableItemBackground"
            android:gravity="center"
            android:text="@string/navigate"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>