<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/dark_blue"
    tools:context=".Activity.Activity_AlarmDialog">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="328dp"
        android:layout_gravity="center"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:background="@drawable/dr_round_corner_dialog"
        android:padding="16dp">

        <ir.ac.kntu.Technical.CustomView.TextViewPlus
            android:id="@+id/dialog_alarm_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/app_name_fa"
            android:textSize="34sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ir.ac.kntu.Technical.CustomView.TextViewPlus
            android:id="@+id/dialog_alarm_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/you_have_one_order_as_described_below"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dialog_alarm_app_name" />

        <View
            android:id="@+id/dialog_alarm_text_divider"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:background="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dialog_alarm_text" />

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/dialog_alarm_restaurant_type_container"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:paddingStart="32dp"
            android:paddingEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dialog_alarm_text_divider">


            <ir.ac.kntu.Technical.CustomView.TextViewPlus
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|right"
                android:text="@string/order_type"
                android:textSize="16sp" />

            <ir.ac.kntu.Technical.CustomView.TextViewPlus
                android:id="@+id/dialog_alarm_restaurabt_type_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|left"
                android:text=""
                android:textColor="@android:color/black"
                android:textSize="16sp" />


        </androidx.coordinatorlayout.widget.CoordinatorLayout>

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/dialog_alarm_restaurant_restaurant_name_container"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:paddingStart="32dp"
            android:paddingEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dialog_alarm_restaurant_type_container">

            <ir.ac.kntu.Technical.CustomView.TextViewPlus
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|right"
                android:text="@string/restaurant_name"
                android:textSize="16sp" />

            <ir.ac.kntu.Technical.CustomView.TextViewPlus
                android:id="@+id/dialog_alarm_restaurant_restaurant_name_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|left"
                android:text=""
                android:textColor="@android:color/black"
                android:textSize="16sp" />
        </androidx.coordinatorlayout.widget.CoordinatorLayout>

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:paddingStart="32dp"
            android:paddingEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dialog_alarm_restaurant_restaurant_name_container">

            <ir.ac.kntu.Technical.CustomView.TextViewPlus
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|right"
                android:text="@string/order_time"
                android:textSize="16sp" />

            <ir.ac.kntu.Technical.CustomView.TextViewPlus
                android:id="@+id/dialog_alarm_restaurabt_date_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|left"
                android:maxLines="1"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

        </androidx.coordinatorlayout.widget.CoordinatorLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>